--- a/Desafios/desafio012/estilo/style.css
+++ b/Desafios/desafio012/estilo/style.css
@@ -3,20 +3,31 @@
     padding:0px;
     margin:0px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02:'Passion One', cursive;
+    --fonte03:'Sriracha', cursive;
+}
 
 html, body{
     max-height: 100vh;
-    background-color: darkgray;
+    background-color: rgb(236, 225, 225);
+    font-family: var(--fonte01);
 }
 
 header{
-    background-color: black;
+    background-image: linear-gradient(to bottom, black, rgb(163, 45, 45));
     color: white;
     text-align: center;
 }
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte02);
+    font-size: 8vw;
 }
 
 header > p{
@@ -38,7 +49,13 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte03);
+    font-size: 3.5vw;
 
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -47,38 +64,37 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgb(41, 40, 40);
+    background-color: rgb(56, 50, 50);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgb(51, 46, 46);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(82, 75, 75, 0.288);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.377);
+    text-shadow: 1px 1px black;
 }
 
 
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
 
+}
 
+section#img02{
+        background-image:url('../imagens/background002.jpg');
+        background-position: right center;
+        background-size: cover;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 
 
 footer{
-    background-color: black;
+    background-image: linear-gradient(to bottom, rgb(163, 45, 45), black );
     color: white;
     padding: 10px;
     text-align: center;
